2004-10-23  Benoît Dejean  <tazforever@dlfp.org>

	* src/load-graph.c: (load_graph_draw), (get_load), (get_memory),
	(load_graph_update), (load_graph_unalloc), (load_graph_alloc),
	(load_graph_configure), (load_graph_expose), (load_graph_destroy),
	(load_graph_new), (load_graph_start), (load_graph_stop): c-set-style linux

2004-10-23  Benoît Dejean  <tazforever@dlfp.org>

	* src/defaulttable.h: Updated.
	
	* src/prettytable.c: (new_application), (application_finished),
	(pretty_table_new), (pretty_table_add_table),
	(pretty_table_get_icon), :
	* src/prettytable.h: pretty_table.app_hash now uses direct_hash/equal.
	Updated icon lookup.
	(free_entry), (free_value), (free_key) excluded.

2004-10-23  Benoît Dejean  <tazforever@dlfp.org>

	* src/callbacks.c: (compare_disks), (get_icon_for_device),
	(add_new_disks), (cb_update_disks):
	* src/callbacks.h:
	* src/cellrenderer.c:
	* src/favorites.c:
	* src/infoview.c: (infoview_create), (infoview_update):
	* src/interface.c:
	* src/memmaps.c:
	* src/prettytable.c:
	* src/procactions.c:
	* src/procdialogs.c:
	* src/procdialogs.h:
	* src/procman.c:
	* src/proctable.c:
	* src/util.c: Marked private global variables as static. Closes #147361.
	Some cleanups (including whitespaces cleanups :)

2004-10-23  Benoît Dejean  <tazforever@dlfp.org>

	* po/POTFILES.in: Updated.

	* src/cellrenderer.h:
	* src/cellrenderer.c: (procman_cell_renderer_progress_init),
	(procman_cell_renderer_progress_get_size),
	(procman_cell_renderer_progress_render): UTF-8-ified. Removed unused
	variables.
	
	* src/prettytable.c: (application_finished), (pretty_table_new),
	(pretty_table_get_icon):
	* src/procactions.c: (kill_single_process):
	* src/procdialogs.c: (procdialog_create_hide_dialog):
	* src/callbacks.c: (cb_about_activate):
	* src/infoview.c: (infoview_update):
	* src/memmaps.c: (create_memmaps_tree):
	* src/procman.c: (main):
	* src/proctable.c: (proctable_new):
	* src/interface.c: (create_sys_view): Removed unused variables.