@@ -1,5 +1,11 @@
 2004-10-23  Benoît Dejean  <tazforever@dlfp.org>
 
+	* src/interface.c: (cpu_size_request): Cleaned.
+	(create_sys_view): Fixed display on SMP systems.
+	* src/load-graph.c: (get_load): Cleaned.
+
+2004-10-23  Benoît Dejean  <tazforever@dlfp.org>
+
 	* src/load-graph.c: (load_graph_draw), (get_load), (get_memory),
 	(load_graph_update), (load_graph_unalloc), (load_graph_alloc),
 	(load_graph_configure), (load_graph_expose), (load_graph_destroy),
